build/log/idf_py_stdout_output_50491
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
/home/jr/.espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gcc  -I/home/jr/esp-drone/build/config -I/home/jr/esp/esp-idf/components/newlib/platform_include -I/home/jr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jr/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/jr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jr/esp/esp-idf/components/freertos/esp_additions/include -I/home/jr/esp/esp-idf/components/esp_hw_support/include -I/home/jr/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jr/esp/esp-idf/components/esp_hw_support/include/soc/esp32s2 -I/home/jr/esp/esp-idf/components/esp_hw_support/port/esp32s2/. -I/home/jr/esp/esp-idf/components/esp_hw_support/port/esp32s2/private_include -I/home/jr/esp/esp-idf/components/heap/include -I/home/jr/esp/esp-idf/components/log/include -I/home/jr/esp/esp-idf/components/soc/include -I/home/jr/esp/esp-idf/components/soc/esp32s2/. -I/home/jr/esp/esp-idf/components/soc/esp32s2/include -I/home/jr/esp/esp-idf/components/hal/esp32s2/include -I/home/jr/esp/esp-idf/components/hal/include -I/home/jr/esp/esp-idf/components/hal/platform_port/include -I/home/jr/esp/esp-idf/components/esp_rom/include -I/home/jr/esp/esp-idf/components/esp_rom/include/esp32s2 -I/home/jr/esp/esp-idf/components/esp_rom/esp32s2 -I/home/jr/esp/esp-idf/components/esp_common/include -I/home/jr/esp/esp-idf/components/esp_system/include -I/home/jr/esp/esp-idf/components/esp_system/port/soc -I/home/jr/esp/esp-idf/components/esp_system/port/include/private -I/home/jr/esp/esp-idf/components/xtensa/include -I/home/jr/esp/esp-idf/components/xtensa/esp32s2/include -I/home/jr/esp/esp-idf/components/lwip/include -I/home/jr/esp/esp-idf/components/lwip/include/apps -I/home/jr/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jr/esp/esp-idf/components/lwip/lwip/src/include -I/home/jr/esp/esp-idf/components/lwip/port/esp32/include -I/home/jr/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/jr/esp-drone/components/drivers/interface -I/home/jr/esp/esp-idf/components/driver/include -I/home/jr/esp/esp-idf/components/driver/deprecated -I/home/jr/esp/esp-idf/components/driver/esp32s2/include -I/home/jr/esp/esp-idf/components/esp_pm/include -I/home/jr/esp/esp-idf/components/esp_ringbuf/include -I/home/jr/esp/esp-idf/components/esp_adc/include -I/home/jr/esp/esp-idf/components/esp_adc/interface -I/home/jr/esp/esp-idf/components/esp_adc/esp32s2/include -I/home/jr/esp/esp-idf/components/esp_adc/deprecated/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/jr/esp-drone=. -fmacro-prefix-map=/home/jr/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c /home/jr/esp-drone/main/app_main.c
/home/jr/esp-drone/main/app_main.c: In function 'app_main':
/home/jr/esp-drone/main/app_main.c:40:30: error: implicit declaration of function 'ledGet'; did you mean 'ledSet'? [-Werror=implicit-function-declaration]
   40 |             ledSet(LED_RED, !ledGet(LED_RED)); // Invierte el estado del LED rojo
      |                              ^~~~~~
      |                              ledSet
cc1: some warnings being treated as errors
[2/11] Building C object esp-idf/drivers/CMakeFiles/__idf_drivers.dir/src/adc.c.obj
FAILED: esp-idf/drivers/CMakeFiles/__idf_drivers.dir/src/adc.c.obj 
/home/jr/.espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gcc  -I/home/jr/esp-drone/build/config -I/home/jr/esp-drone/components/drivers/interface -I/home/jr/esp/esp-idf/components/newlib/platform_include -I/home/jr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jr/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/jr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jr/esp/esp-idf/components/freertos/esp_additions/include -I/home/jr/esp/esp-idf/components/esp_hw_support/include -I/home/jr/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jr/esp/esp-idf/components/esp_hw_support/include/soc/esp32s2 -I/home/jr/esp/esp-idf/components/esp_hw_support/port/esp32s2/. -I/home/jr/esp/esp-idf/components/esp_hw_support/port/esp32s2/private_include -I/home/jr/esp/esp-idf/components/heap/include -I/home/jr/esp/esp-idf/components/log/include -I/home/jr/esp/esp-idf/components/soc/include -I/home/jr/esp/esp-idf/components/soc/esp32s2/. -I/home/jr/esp/esp-idf/components/soc/esp32s2/include -I/home/jr/esp/esp-idf/components/hal/esp32s2/include -I/home/jr/esp/esp-idf/components/hal/include -I/home/jr/esp/esp-idf/components/hal/platform_port/include -I/home/jr/esp/esp-idf/components/esp_rom/include -I/home/jr/esp/esp-idf/components/esp_rom/include/esp32s2 -I/home/jr/esp/esp-idf/components/esp_rom/esp32s2 -I/home/jr/esp/esp-idf/components/esp_common/include -I/home/jr/esp/esp-idf/components/esp_system/include -I/home/jr/esp/esp-idf/components/esp_system/port/soc -I/home/jr/esp/esp-idf/components/esp_system/port/include/private -I/home/jr/esp/esp-idf/components/xtensa/include -I/home/jr/esp/esp-idf/components/xtensa/esp32s2/include -I/home/jr/esp/esp-idf/components/lwip/include -I/home/jr/esp/esp-idf/components/lwip/include/apps -I/home/jr/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jr/esp/esp-idf/components/lwip/lwip/src/include -I/home/jr/esp/esp-idf/components/lwip/port/esp32/include -I/home/jr/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/jr/esp/esp-idf/components/driver/include -I/home/jr/esp/esp-idf/components/driver/deprecated -I/home/jr/esp/esp-idf/components/driver/esp32s2/include -I/home/jr/esp/esp-idf/components/esp_pm/include -I/home/jr/esp/esp-idf/components/esp_ringbuf/include -I/home/jr/esp/esp-idf/components/esp_adc/include -I/home/jr/esp/esp-idf/components/esp_adc/interface -I/home/jr/esp/esp-idf/components/esp_adc/esp32s2/include -I/home/jr/esp/esp-idf/components/esp_adc/deprecated/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/jr/esp-drone=. -fmacro-prefix-map=/home/jr/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/drivers/CMakeFiles/__idf_drivers.dir/src/adc.c.obj -MF esp-idf/drivers/CMakeFiles/__idf_drivers.dir/src/adc.c.obj.d -o esp-idf/drivers/CMakeFiles/__idf_drivers.dir/src/adc.c.obj -c /home/jr/esp-drone/components/drivers/src/adc.c
/home/jr/esp-drone/components/drivers/src/adc.c: In function 'adcInit':
/home/jr/esp-drone/components/drivers/src/adc.c:63:10: error: 'adc_digi_pattern_config_t' has no member named 'bitwidth'; did you mean 'bit_width'?
   63 |         .bitwidth = ADC_BITWIDTH_DEFAULT,
      |          ^~~~~~~~
      |          bit_width
/home/jr/esp-drone/components/drivers/src/adc.c: In function 'adcProcessingTask':
/home/jr/esp-drone/components/drivers/src/adc.c:133:55: error: 'adc_digi_output_data_t' has no member named 'data'
  133 |                 adc_cali_raw_to_voltage(cali_handle, p->data.val, &voltage_mv);
      |                                                       ^~
[3/11] Performing build step for 'bootloader'
[1/1] cd /home/jr/esp-drone/build/bootloader/esp-idf/esptool_py && /home/jr/.espressif/python_env/idf5.0_py3.12_env/bin/python /home/jr/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/jr/esp-drone/build/bootloader/bootloader.bin
Bootloader binary size 0x5420 bytes. 0x1be0 bytes (25%) free.
ninja: build stopped: subcommand failed.
